<resources>
    <string name="app_name">IU</string>

    <string name="school_motto">厚德博学，敬业乐群</string>
    <string name="signin">登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>

    <string name="home">十大</string>
    <string name="collect">收藏</string>
    <string name="reply_me">回复我</string>
    <string name="at_me">\@我</string>
    <string name="mail">邮件</string>
    <string name="vote">投票</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>

    <string name="invalid_user">无效用户</string>

    <string name="reply_count">%1$d回复</string>
    <string name="readed">已读</string>
    <string name="collected">已收藏</string>
    <string name="cancel_collect">取消收藏</string>

    <string name="search_by_author">按作者搜索</string>
    <string name="search_by_keyword">按关键字搜索</string>
    <string name="write">发帖</string>
    <string name="send_mail">写信</string>
    <string name="all_mark_read">全部标为已读</string>
    <string name="clear">清空</string>

    <string name="voted">已投</string>
    <string name="terminated">已截止</string>
    <string name="vote_totle_num">%1$d人参与</string>
    <string name="multi_vote">多选</string>
    <string name="single_vote">单选</string>

    <string name="vote_new">最新投票</string>
    <string name="vote_my">我的投票</string>
    <string name="vote_join">我参与的投票</string>
    <string name="vote_hot">热门投票</string>
    <string name="vote_all">全部投票</string>

    <string name="empty">无内容</string>
    <string name="no_user">用户不存在</string>

    <string name="base_info">基本信息</string>
    <string name="sex">性别：</string>
    <string name="astro">星座：</string>
    <string name="qq">QQ：</string>
    <string name="msn">MSN：</string>
    <string name="home_page">首页：</string>
    <string name="forum_info">论坛属性</string>
    <string name="forum_level">论坛等级：</string>
    <string name="life">生命值：</string>
    <string name="score">积分：</string>
    <string name="post_count">发文数量：</string>
    <string name="is_online">是否在线：</string>
    <string name="role">用户身份：</string>
    <string name="first_login_time">注册时间：</string>
    <string name="last_login_time">上次登录时间：</string>
    <string name="login_count">登录次数：</string>

    <string name="vote_detail">投票详情</string>

    <string name="already_chose">已选%1$d/%2$d项</string>

</resources>
