<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    tools:context="com.sollian.iu.activity.SignActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="@dimen/titlebar_height"
        android:background="@color/theme"
        android:gravity="center"
        android:text="@string/signin"
        android:textColor="@color/text_first_invert"
        android:textSize="@dimen/titlebar_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userName_ll"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="text"
            android:textColor="@color/text_first"
            android:textSize="@dimen/text_16" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/userName_ll"
        app:layout_constraintRight_toRightOf="@+id/userName_ll"
        app:layout_constraintTop_toBottomOf="@+id/userName_ll">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/text_first"
            android:textSize="@dimen/text_16" />
    </android.support.design.widget.TextInputLayout>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/submit"
        style="@style/button.blue_large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/signin"
        app:layout_constraintLeft_toLeftOf="@+id/password_ll"
        app:layout_constraintRight_toRightOf="@+id/password_ll"
        app:layout_constraintTop_toBottomOf="@+id/password_ll" />
</android.support.constraint.ConstraintLayout>
